--- a/package.json
+++ b/package.json
@@ -1,18 +1,17 @@
 {
-  "name": "airbnb-like-app",
+  "name": "airbnbmongo",
   "version": "0.0.0",
   "private": true,
   "scripts": {
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
-    "bcrypt": "^1.0.3",
     "body-parser": "~1.18.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.15.5",
     "jade": "~1.11.0",
-    "lodash": "^4.17.4",
+    "mongoose": "^4.12.3",
     "morgan": "~1.9.0",
     "serve-favicon": "~2.4.5"
   }
